Add tests for external API calls and json reading